--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=developing
-logging.level.org.springframework=debug
+logging.level.org.springframework.web=debug
 spring.application.name=Bookstore
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/Bookstore
