--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-### ignore images ###
-images/**
+
+images/
 
 ### NetBeans ###
 /nbproject/private/
