--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= bookstore705@gmail.com
+spring.mail.password= wsgz hpjp qlws hppx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
