ready to merge with master

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-spring.profiles.active=developing
-logging.level.org.springframework.web=debug
 spring.application.name=Bookstore
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Bookstore
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= bookstore705@gmail.com
-spring.mail.password= wsgz hpjp qlws hppx
+spring.mail.username= 
+spring.mail.password= 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
