--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 spring.application.name=Bookstore
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/Bookstore
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.open-in-view=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= 
-spring.mail.password= 
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+app.image.folder=images
+app.image.cover.folder=covers
+app.image.cover.default=default.png
+app.image.avatar.default=default.png
+app.image.avatar.folder=avatars
